myfile.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1beta1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"devops","tier":"frontend"},"name":"devops-deployment","namespace":"default"},"spec":{"replicas":3,"selector":{"matchLabels":{"app":"devops","tier":"frontend"}},"template":{"metadata":{"labels":{"app":"devops","tier":"frontend"}},"spec":{"containers":[{"image":"gcr.io/humana-dar/humana:v1.0","name":"devops-demo","ports":[{"containerPort":8080}],"resources":{"limits":{"cpu":"0.5","memory":"512Mi"}, [...]
  creationTimestamp: "2019-10-10T18:47:19Z"
  generation: 1
  labels:
    app: devops
    tier: frontend
  name: devops-deployment
  namespace: default
  resourceVersion: "60767"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/devops-deployment
  uid: 63312735-eb8e-11e9-9f4c-42010a8001e4
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: devops
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: devops
        tier: frontend
    spec:
      containers:
      - image: gcr.io/humana-dar/humana:v1.0
        imagePullPolicy: IfNotPresent
        name: devops-demo
        ports:
        - containerPort: 8080
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 100m
            memory: 256Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 3
  conditions:
  - lastTransitionTime: "2019-10-10T18:47:22Z"
    lastUpdateTime: "2019-10-10T18:47:22Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2019-10-10T18:47:19Z"
    lastUpdateTime: "2019-10-10T18:47:22Z"
    message: ReplicaSet "devops-deployment-54f596c4bc" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 3
  replicas: 3
  updatedReplicas: 3
