gke-config.yaml
apiVersion: v1
kind: Pod
metadata:
  name: converter-pod
  labels:
    purpose: converter-frontend
spec:
  containers:
  - name: converter-web-site
    image: gcr.io/dev-ops-demo/converter-web-site:latest

---

apiVersion: v1
kind: Service
metadata:
  name: converter-service
  labels:
    app: converter
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: converter
    tier: frontend
