kubernetes-ingress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-deployment
  labels:
    app: devops
spec:
  replicas: 3
  selector:
    matchLabels:
      app: devops
  template:
    metadata:
      labels:
        app: devops
    spec:
      containers:
      - name: devops-demo
        image: drehnstrom/devops-demo:v1.0
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "256Mi"
            cpu: "0.1"
          limits:
            memory: "512Mi"
            cpu: "0.5"

---
apiVersion: v1
kind: Service
metadata:
  name: devops-service
  labels:
    app: devops
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: devops

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devops-ingress
spec:
  backend:
    serviceName: devops-service
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: devops-service
          servicePort: 80
